scripts/nullaway/original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8.txt
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:15: error: [NullAway] initializer method does not guarantee @NonNull field location (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Miner() {
           ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:9: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 5), previous (line 6), global (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/troll/Troll.java:4: error: [NullAway] @NonNull field state not initialized
    private State state;
                  ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:15: error: [NullAway] initializer method does not guarantee @NonNull field location (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Miner() {
           ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 6), previous (line 7), global (line 8) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/EntityManager.java:20: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return entities.get(id);
        ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworld/Miner.java:8: error: [NullAway] @NonNull field location not initialized
    private Location location;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:15: error: [NullAway] initializer method does not guarantee @NonNull field location (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Miner() {
           ^
    (see http://t.uber.com/nullaway )
../original/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:9: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 5), previous (line 6), global (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
